Fix modal overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -615,7 +615,7 @@ th:last-child, td:last-child {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto 1fr;
-    padding: 20px 10px;
+    padding: 10px;
     width: 95%;
     max-width: 450px;
     margin: auto;
@@ -710,7 +710,7 @@ th:last-child, td:last-child {
     font-size: 14px;
 }
 
-@media only screen and (min-width: 300px) {
+@media only screen and (min-width: 350px) {
     .modal-card {
         padding: 30px;
     }
